--- a/readMe
+++ b/readMe
@@ -1,6 +1,6 @@
 
 
-# YouGotMail - Email Deletion Application
+## YouGotMail - Email Deletion Application
 
 **YouGotMail** is a JavaFX application that allows users to delete emails from their inbox within a specific date range. The application connects to a Gmail account using IMAP and provides an interface for selecting the range of emails to be deleted based on the date. The user can enter their credentials and the range for email deletion.
 
@@ -36,7 +36,7 @@ Before running the application, ensure that you have the following installed:
      - [activation-1.1.1.jar](https://mvnrepository.com/artifact/jakarta.activation/jakarta.activation-api/2.1.3)
      - [javax.mail-1.6.2.jar](https://mvnrepository.com/artifact/javax.mail/javax.mail-api)
 
-### Clone the Project
+## Clone the Project
 
 Clone this repository to your local machine:
 
@@ -45,7 +45,7 @@ git clone https://github.com/yourusername/YouGotMail.git
 cd YouGotMail
 ```
 
-### Adding JAR Dependencies
+## Adding JAR Dependencies
 
 You need to include the necessary JAR files for JavaMail and Jakarta Activation:
 
@@ -59,11 +59,11 @@ The application connects to Gmail using IMAP. Make sure your Gmail account allow
 1. Enter your **Gmail Email** and **Password** when prompted.
 2. Select the date range (From and To) for the emails you wish to delete.
 
-### Troubleshooting
+## Troubleshooting
 
 - **`java.lang.ClassNotFoundException: javafx.application.Application`**: This indicates that JavaFX is not configured correctly. Ensure that you have added the JavaFX SDK to your project and set it up properly in your IDE or via the classpath.
 - **Gmail IMAP Issues**: Ensure your Gmail account settings allow IMAP access and that you have the correct permissions to access your email programmatically.
 - **App Passwords**: If you use two-factor authentication, ensure that you're using an App Password rather than your regular Gmail password.
 
-### Screenshots
+## Screenshots
 
